--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,4 +22,18 @@ jobs:
 
       - name: Installing JSHint
         run: |
-          sudo npm install -g j
+          sudo npm install -g jshint
+
+      - name: Change script permission
+        run: |
+          chmod +x scripts/jshint-script.sh
+
+      - name: Run scan with JSHint
+        run: scripts/jshint-script.sh
+
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: linting tool report
+          path: |
+            ./JSHint-report
